--- a/spec/fixtures/single_page_trans.html
+++ b/spec/fixtures/single_page_trans.html
@@ -33,11 +33,11 @@ td {
               <TD>Sowden</TD>
               <TD></TD>
               <TD class="label">Extended Text:</TD>
-              <TD></TD>
+              <TD>Ext text</TD>
             </TR>
             <TR>
               <TD class="label">Summary Details:</TD>
-              <TD colSpan="4"></TD>
+              <TD colSpan="4">Test</TD>
             </TR>
             <TR>
               <td class="label">Index:</STRONG></td>
