Big fix in trans. parser, rake task to load trans. details

--- a/spec/fixtures/trans_details.html
+++ b/spec/fixtures/trans_details.html
@@ -23,21 +23,21 @@ td {
           <TABLE>
             <TR>
               <td class="label">Surname:</STRONG></td>
-              <TD>Brown</TD>
+              <TD>Sowden</TD>
               <TD class="spacer"></TD>
               <td class="label">Forename:</STRONG></td>
               <TD>Nicolle Stephanie Cubitt </TD>
             </TR>
             <TR>
               <td class="label">Maiden Name:</STRONG></td>
-              <TD>Sowden</TD>
+              <TD></TD>
               <TD></TD>
               <TD class="label">Extended Text:</TD>
-              <TD>Ext text</TD>
+              <TD></TD>
             </TR>
             <TR>
               <TD class="label">Summary Details:</TD>
-              <TD colSpan="4">Test</TD>
+              <TD colSpan="4"></TD>
             </TR>
             <TR>
               <td class="label">Index:</STRONG></td>
